--- a/RCCM/Views/Candidate/Delete.cshtml
+++ b/RCCM/Views/Candidate/Delete.cshtml
@@ -50,7 +50,14 @@
                             <input asp-for="Nationality.NationalityName" class="form-control custom-form-control" readonly />
                         </div>
 
+                        <div class="mb-4">
+                            <label asp-for="CandidateStatus" class="form-label custom-form-label">الحالة</label>
+                            <input asp-for="CandidateStatus.Status" class="form-control custom-form-control" readonly />
+                        </div>
+
                         <input type="hidden" asp-for="CandidateId" />
+
+
 
                         <div class="d-flex justify-content-between mt-4">
                             <button type="submit" class="btn btn-danger">حذف المرشح</button>
