--- a/RCCM/Views/Grade/Add.cshtml
+++ b/RCCM/Views/Grade/Add.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container my-4">
-
+    <!-- successful alert    -->
     <div id="successAlert" class="alert alert-success d-none">
         <span class="alert-message"></span>
     </div>
