--- a/RCCM/Views/Grade/Edit.cshtml
+++ b/RCCM/Views/Grade/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container my-4">
 
-    <!-- Display Success Alert -->
+    <!-- Display edit Alert -->
     <div id="successAlert" class="alert alert-warning d-none">
         <span class="alert-message"></span>
     </div>
