--- a/RCCM/Views/Candidate/Edit.cshtml
+++ b/RCCM/Views/Candidate/Edit.cshtml
@@ -49,13 +49,18 @@
                         </div>
 
                         <div class="mb-3">
-                            <label asp-for="Major.MajorId" class="form-label custom-form-label">التخصص الجامعي</label>
-                            <select asp-for="Major.MajorId" class="form-control form-select custom-form-select" asp-items="@(new SelectList(Model.Majors, "MajorId", "MajorName", Model.Major.MajorId))"></select>
+                            <label asp-for="MajorId" class="form-label custom-form-label">التخصص الجامعي</label>
+                            <select asp-for="MajorId" class="form-control form-select custom-form-select" asp-items="@(new SelectList(Model.Majors, "MajorId", "MajorName", Model.Major.MajorId))"></select>
                         </div>
 
                         <div class="mb-4">
-                            <label asp-for="Nationality.NationalityId" class="form-label custom-form-label">الجنسية</label>
-                            <select asp-for="Nationality.NationalityId" class="form-control form-select custom-form-select" asp-items="@(new SelectList(Model.Nationalities, "NationalityId", "NationalityName", Model.Nationality.NationalityId))"></select>
+                            <label asp-for="NationalityId" class="form-label custom-form-label">الجنسية</label>
+                            <select asp-for="NationalityId" class="form-control form-select custom-form-select" asp-items="@(new SelectList(Model.Nationalities, "NationalityId", "NationalityName", Model.Nationality.NationalityId))"></select>
+                        </div>
+
+                        <div class="form-group">
+                            <label asp-for="CandidateStatusId" class="form-check-label">حالة المرشح</label>
+                            <select asp-for="CandidateStatusId" class="form-control form-select" asp-items="@(new SelectList(Model.CandidateStatuses, "CandidateStatusId", "Status",Model.CandidateStatus.CandidateStatusId))"></select>
                         </div>
 
                         <input type="hidden" asp-for="CandidateId" />
