--- a/RCCM/Views/CandidateStatus/Delete.cshtml
+++ b/RCCM/Views/CandidateStatus/Delete.cshtml
@@ -8,6 +8,11 @@
 <div class="container my-4">
     <h2 class="text-center mb-4">حذف الحالة</h2>
 
+    <!-- Display delete Alert -->
+    <div id="successAlert" class="alert alert-danger d-none">
+        <span class="alert-message"></span>
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow custom-card border-danger">
@@ -15,7 +20,7 @@
                     <h3>تأكيد الحذف</h3>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="DeleteCandidateStatus" method="post">
+                    <form id="deleteUserForm" asp-action="DeleteCandidateStatus" method="post">
                         <p><strong>اسم الحالة:</strong> @Model.Status</p>
                         <input type="hidden" asp-for="CandidateStatusId" />
                         <input type="hidden" asp-for="Status" />
