--- a/RCCM/Views/CandidateStatus/Edit.cshtml
+++ b/RCCM/Views/CandidateStatus/Edit.cshtml
@@ -8,6 +8,12 @@
 <div class="container my-4">
     <h2 class="text-center mb-4">تحديث الصلاحيات</h2>
 
+    <!-- Display edit Alert -->
+    <div id="successAlert" class="alert alert-warning d-none">
+        <span class="alert-message"></span>
+    </div>
+
+
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow custom-card border-success">
@@ -15,7 +21,7 @@
                     <h3>تحديث الصلاحية</h3>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="EditCandidateStatus" method="post">
+                    <form id="editUserForm" asp-action="EditCandidateStatus" method="post">
                         <div class="mb-3">
                             <label asp-for="Status" class="form-label">اسم الحالة</label>
                             <input asp-for="Status" class="form-control" value="@Model.Status" />
