--- a/RCCM/Views/ExamTypeConf/Delete.cshtml
+++ b/RCCM/Views/ExamTypeConf/Delete.cshtml
@@ -5,7 +5,11 @@
 }
 
 <div class="container my-4">
-    <h2 class="text-center mb-4">حذف الاختبار</h2>
+
+    <!-- Display delete Alert -->
+    <div id="successAlert" class="alert alert-danger d-none">
+        <span class="alert-message"></span>
+    </div>
 
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -14,7 +18,7 @@
                     <h3>تأكيد حذف الاختبار</h3>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="DeleteExamTypeConf" method="post">
+                    <form id="deleteUserForm" asp-action="DeleteExamTypeConf" method="post">
                         <p><strong>اسم الاختبار:</strong> @Model.Title</p>
                         <input type="hidden" asp-for="ExamTypeConfId" />
                         <input type="hidden" asp-for="Title" />
