--- a/RCCM/Views/ExamTypeConf/Edit.cshtml
+++ b/RCCM/Views/ExamTypeConf/Edit.cshtml
@@ -5,7 +5,12 @@
 }
 
 <div class="container my-4">
-    <h2 class="text-center mb-4">تحديث معلومات الاختبار</h2>
+
+    <!-- Display edit Alert -->
+    <div id="successAlert" class="alert alert-warning d-none">
+        <span class="alert-message"></span>
+    </div>
+
 
     <div class="row justify-content-center">
         <div class="col-md-8">
@@ -14,7 +19,7 @@
                     <h3>تحديث بيانات الاختبار</h3>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="EditExamTypeConf" method="post">
+                    <form id="editUserForm" asp-action="EditExamTypeConf" method="post">
                         <div class="mb-3">
                             <label asp-for="Title" class="form-label">عنوان الاختبار</label>
                             <input asp-for="Title" class="form-control" />
