--- a/RCCM/Views/Major/Add.cshtml
+++ b/RCCM/Views/Major/Add.cshtml
@@ -5,6 +5,12 @@
 }
 
 <div class="container mt-5 mb-5">
+
+    <!-- successful alert -->
+    <div id="successAlert" class="alert alert-success d-none">
+        <span class="alert-message"></span>
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow custom-card border-primary">
@@ -12,7 +18,7 @@
                     <h2>إضافة تخصص</h2>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="Add" method="post">
+                    <form id="addUserForm" asp-action="Add" method="post">
                         <div class="mb-3">
                             <label asp-for="MajorName" class="form-label custom-form-label">اسم التخصص</label>
                             <input asp-for="MajorName" class="form-control custom-form-control" />
