--- a/RCCM/Views/Major/Delete.cshtml
+++ b/RCCM/Views/Major/Delete.cshtml
@@ -6,6 +6,12 @@
 }
 
 <div class="container mt-5 mb-5">
+
+    <!-- Display delete Alert -->
+    <div id="successAlert" class="alert alert-danger d-none">
+        <span class="alert-message"></span>
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow custom-card border-primary">
@@ -13,7 +19,7 @@
                     <h2>حذف التخصص</h2>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="DeleteMajor" method="post">
+                    <form id="deleteUserForm" asp-action="DeleteMajor" method="post">
                         <div class="mb-3">
                             <label class="form-label custom-form-label">اسم التخصص</label>
                             <p class="form-control-plaintext">@Model.MajorName</p>
