--- a/RCCM/Views/Major/Edit.cshtml
+++ b/RCCM/Views/Major/Edit.cshtml
@@ -6,6 +6,13 @@
 }
 
 <div class="container mt-5 mb-5">
+
+    <!-- Display edit Alert -->
+    <div id="successAlert" class="alert alert-warning d-none">
+        <span class="alert-message"></span>
+    </div>
+
+
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow custom-card border-primary">
@@ -13,7 +20,7 @@
                     <h2>تحديث تخصص</h2>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="EditMajor" method="post">
+                    <form id="editUserForm" asp-action="EditMajor" method="post">
                         <div class="mb-3">
                             <label asp-for="MajorName" class="form-label custom-form-label">اسم التخصص</label>
                             <input asp-for="MajorName" class="form-control custom-form-control" value="@Model.MajorName" />
