--- a/RCCM/Views/Nationality/Delete.cshtml
+++ b/RCCM/Views/Nationality/Delete.cshtml
@@ -5,6 +5,12 @@
 }
 
 <div class="container mt-5 mb-5">
+
+    <!-- Display delete Alert -->
+    <div id="successAlert" class="alert alert-danger d-none">
+        <span class="alert-message"></span>
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow custom-card border-danger">
@@ -12,7 +18,7 @@
                     <h2>حذف الجنسية</h2>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="DeleteNationality" method="post">
+                    <form id="deleteUserForm" asp-action="DeleteNationality" method="post">
                         <p><strong>اسم الجنسية:</strong> @Model.NationalityName</p>
                         <input type="hidden" name="id" asp-for="NationalityId" />
 
