--- a/RCCM/Views/Nationality/Edit.cshtml
+++ b/RCCM/Views/Nationality/Edit.cshtml
@@ -6,6 +6,13 @@
 }
 
 <div class="container mt-5 mb-5">
+
+    <!-- Display edit Alert -->
+    <div id="successAlert" class="alert alert-warning d-none">
+        <span class="alert-message"></span>
+    </div>
+
+
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow custom-card border-success">
@@ -13,7 +20,7 @@
                     <h2>تحديث الجنسية</h2>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="EditNationality" method="post">
+                    <form id="editUserForm" asp-action="EditNationality" method="post">
                         <div class="form-group mb-3">
                             <label asp-for="NationalityName" class="form-label custom-form-label">اسم الجنسية</label>
                             <input asp-for="NationalityName" class="form-control custom-form-control" value="@Model.NationalityName" />
