--- a/RCCM/Views/Role/Delete.cshtml
+++ b/RCCM/Views/Role/Delete.cshtml
@@ -5,6 +5,10 @@
 }
 
 <div class="container mt-5 mb-5">
+    <!-- Display delete Alert -->
+    <div id="successAlert" class="alert alert-danger d-none">
+        <span class="alert-message"></span>
+    </div>
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow custom-card border-danger">
@@ -12,7 +16,7 @@
                     <h2>حذف الصلاحية</h2>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="DeleteRole" method="post">
+                    <form id="deleteUserForm" asp-action="DeleteRole" method="post">
                         <p><strong>اسم الصلاحية:</strong> @Model.RoleName</p>
                         <input type="hidden" asp-for="RoleId" />
                         <input type="hidden" asp-for="RoleName" />
