--- a/RCCM/Views/Role/Edit.cshtml
+++ b/RCCM/Views/Role/Edit.cshtml
@@ -5,6 +5,12 @@
 }
 
 <div class="container mt-5 mb-5">
+
+    <!-- Display edit Alert -->
+    <div id="successAlert" class="alert alert-warning d-none">
+        <span class="alert-message"></span>
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow custom-card border-success">
@@ -12,7 +18,7 @@
                     <h2>تحديث الصلاحيات</h2>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="EditRole" method="post">
+                    <form id="editUserForm" asp-action="EditRole" method="post">
                         <div class="mb-3">
                             <label asp-for="RoleName" class="form-label custom-form-label">اسم الصلاحية</label>
                             <input asp-for="RoleName" class="form-control custom-form-control" value="@Model.RoleName" />
