--- a/RCCM/Views/User/Delete.cshtml
+++ b/RCCM/Views/User/Delete.cshtml
@@ -5,14 +5,20 @@
 }
 
 <div class="container mt-5 mb-5">
+
+    <!-- Display delete Alert -->
+    <div id="successAlert" class="alert alert-danger d-none">
+        <span class="alert-message"></span>
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <div class="card shadow custom-card border-primary">
-                <div class="card-header bg-custom-primary text-white text-center">
+            <div class="card shadow custom-card border-danger">
+                <div class="card-header bg-custom-primary  text-white text-center">
                     <h2>حذف المستخدم</h2>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="DeleteUser" method="post">
+                    <form id="deleteUserForm" asp-action="DeleteUser" method="post">
                         <div class="mb-3">
                             <p><strong>اسم المستخدم:</strong> @Model.UserName</p>
                         </div>
