--- a/RCCM/Views/User/Edit.cshtml
+++ b/RCCM/Views/User/Edit.cshtml
@@ -5,7 +5,15 @@
     Layout = "_AdminLayout";
 }
 
+
+
 <div class="container mt-5 mb-5">
+
+    <!-- Display edit Alert -->
+    <div id="successAlert" class="alert alert-warning d-none">
+        <span class="alert-message"></span>
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card shadow custom-card border-primary">
@@ -13,7 +21,7 @@
                     <h2>تحديث مستخدم</h2>
                 </div>
                 <div class="card-body custom-card-body">
-                    <form asp-action="EditUser" method="post">
+                    <form id="editUserForm" asp-action="EditUser" method="post">
                         <div class="mb-3">
                             <label asp-for="UserName" class="form-label custom-form-label">اسم المستخدم</label>
                             <input asp-for="UserName" class="form-control custom-form-control" value="@Model.UserName" />
