--- a/RCCM/Views/Experience/Add.cshtml
+++ b/RCCM/Views/Experience/Add.cshtml
@@ -8,7 +8,13 @@
                     <h2>إضافة خبرة</h2>
                 </div>
                 <div class="card-body bg-light">
-                    <form asp-action="AddExp method="post">
+                    <form asp-action="AddExp" method="post">
+                        <div class="row mb-3">
+                            <label asp-for="Candidate.CandidateName" class="col-sm-3 col-form-label text-custom-primary fw-bold">اسم المرشح</label>
+                            <label asp-for="Candidate.CandidateName" class="col-sm-3 col-form-label text-custom-primary fw-bold">@Model.Candidate.CandidateName</label>
+                            <label asp-for="Candidate.NationalId" class="col-sm-3 col-form-label text-custom-primary fw-bold">رقم الهوية</label>
+                            <label asp-for="Candidate.NationalId" class="col-sm-3 col-form-label text-custom-primary fw-bold">1234567890</label>
+                        </div>
                         <div class="form-group row mb-3">
                             <label asp-for="CompanyName" class="col-sm-4 col-form-label text-custom-primary fw-bold">اسم الشركة</label>
                             <div class="col-sm-8">
@@ -68,13 +74,14 @@
                         </div>
 
                         <div class="form-group row mb-3">
-                            <label asp-for="CandidateId" class="col-sm-4 col-form-label text-custom-primary fw-bold">معرف المرشح</label>
+                            <label asp-for="Grade" class="col-sm-4 col-form-label text-custom-primary fw-bold">الدرجة الوظيفية</label>
                             <div class="col-sm-8">
-                                <input asp-for="CandidateId" type="number" class="form-control form-control-lg border-custom-primary" placeholder="أدخل معرف المرشح" />
-                                <span class="text-danger mt-1" asp-validation-for="CandidateId"></span>
+                                <select asp-for="GradeId" class="form-select form-select-lg border-custom-primary" asp-items="@(new SelectList(Model.Grades, "GradeId", "GradeValue"))">
+                                </select>
                             </div>
                         </div>
-
+                        <input hidden asp-for="CandidateId" />
+                        
                         <div class="d-flex justify-content-between mt-4">
                             <button type="submit" class="btn btn-success btn-lg shadow-sm">إضافة خبرة</button>
                             <a class="btn btn-danger btn-lg shadow-sm" asp-action="Index">العودة لقائمة التجارب</a>
