--- a/RCCM/Views/_ViewImports.cshtml
+++ b/RCCM/Views/_ViewImports.cshtml
@@ -11,4 +11,5 @@
 @using Core.Entities.ViewModel.Interview;
 @using Core.Entities.ViewModel.Experience;
 @using Core.Entities.ViewModel.CandidateExamSchedule;
+@using Core.Consts
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
