Update candidate views and added Candidate Service

--- a/RCCM/Views/Candidate/Delete.cshtml
+++ b/RCCM/Views/Candidate/Delete.cshtml
@@ -50,6 +50,11 @@
                             <input asp-for="Nationality.NationalityName" class="form-control custom-form-control" readonly />
                         </div>
 
+                        <div class="mb-4">
+                            <label asp-for="CandidateStatus" class="form-label custom-form-label">حالة المرشح</label>
+                            <input asp-for="CandidateStatus.Status" class="form-control custom-form-control" readonly />
+                        </div>
+
                         <input type="hidden" asp-for="CandidateId" />
 
                         <div class="d-flex justify-content-between mt-4">
