--- a/RCCM/Views/Experience/Index.cshtml
+++ b/RCCM/Views/Experience/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<ExperienceViewModel>
 
 
-<h1 class="text-center mb-4">قائمة الدرجات (@Model.Count)</h1>
+<h1 class="text-center mb-4">قائمة  (@Model.Count)</h1>
 
 <div class="container">
     <table class="table table-hover table-striped">
